@@ -47,12 +47,12 @@ if { [gdb_compile_shlib "${srcdir}/${subdir}/${srcfile2}" ${binfile2} {debug}] !
 # KIND is passed to the "catch" command.
 # MATCH is a boolean saying whether we expect the catchpoint to be hit.
 proc one_catch_load_test {scenario kind match sostop} { with_test_prefix "${scenario}" {
-    global verbose testfile testfile2 binfile2_dlopen
+    global verbose testfile testfile2 binfile2 binfile2_dlopen
     global srcfile
     global decimal gdb_prompt
 
     clean_restart $testfile
-    gdb_load_shlibs $binfile2_dlopen
+    gdb_load_shlibs $binfile2
 
     if {![runto_main]} {
 	fail "can't run to main"
